# market-watch

./: .env-template  README.md  main.py  pyproject.toml
app/: settings.py
