[project]
name = "market-watch"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "GNU v3"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django (>=5.2.5,<6.0.0)",
    "django-ses (>=4.4.0,<5.0.0)",
    "boto3 (>=1.40.19,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "django-allauth (>=65.11.1,<66.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
